--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "typescript",
     "ascii-art"
   ],
-  "author": "Your Name",
+  "author": "barooon165",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
