--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,11 @@
+---
 name: Release
-
 on:
   push:
     tags:
-      - 'v*'
-
+      - v*
 permissions:
   contents: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,26 +14,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
-
+          node-version: "18"
+          cache: npm
       - name: Install dependencies
         run: npm ci
-
       - name: Build TypeScript
         run: npm run build
-
       - name: Install pkg globally
         run: npm install -g pkg
-
       - name: Package application
-        run: |
+        run: >
           pkg . --targets node18-linux-x64,node18-macos-x64,node18-win-x64 --output dist/weathery
-
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
